# cmd/open_im_api/docs/swagger.yaml
@@ -438,9 +438,6 @@ definitions:
     type: object
   base_info.CreateDepartmentResp:
     properties:
-      data:
-        additionalProperties: true
-        type: object
       errCode:
         type: integer
       errMsg:
@@ -872,11 +869,6 @@ definitions:
     type: object
   base_info.GetDepartmentMemberResp:
     properties:
-      data:
-        items:
-          additionalProperties: true
-          type: object
-        type: array
       errCode:
         type: integer
       errMsg:
@@ -1055,11 +1047,6 @@ definitions:
     type: object
   base_info.GetSubDepartmentResp:
     properties:
-      data:
-        items:
-          additionalProperties: true
-          type: object
-        type: array
       errCode:
         type: integer
       errMsg:
@@ -1139,9 +1126,6 @@ definitions:
     type: object
   base_info.GetUserInDepartmentResp:
     properties:
-      data:
-        additionalProperties: true
-        type: object
       errCode:
         type: integer
       errMsg:
@@ -4162,11 +4146,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetAllConversationsResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetAllConversationsResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取用户所有会话
       tags:
       - 会话相关
@@ -4198,11 +4182,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetConversationResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetConversationResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 根据会话ID获取会话
       tags:
       - 会话相关
@@ -4234,11 +4218,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetConversationsResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetConversationsResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 根据会话ID列表获取会话
       tags:
       - 会话相关
@@ -4333,11 +4317,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.CommentOneWorkMomentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.CommentOneWorkMomentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 评论一条工作圈
       tags:
       - 工作圈
@@ -4370,11 +4354,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.CreateOneWorkMomentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.CreateOneWorkMomentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 创建一条工作圈
       tags:
       - 工作圈
@@ -4406,11 +4390,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.CreateTagResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.CreateTagResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 创建标签
       tags:
       - 标签
@@ -4442,11 +4426,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.DeleteCommentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.DeleteCommentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 删除一条评论
       tags:
       - 工作圈
@@ -4478,11 +4462,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.DeleteOneWorkMomentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.DeleteOneWorkMomentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 删除一条工作圈
       tags:
       - 工作圈
@@ -4514,11 +4498,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.DeleteTagResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.DeleteTagResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 删除标签
       tags:
       - 标签
@@ -4550,11 +4534,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetTagSendLogsResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetTagSendLogsResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取发送历史记录
       tags:
       - 标签
@@ -4586,11 +4570,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetUserFriendWorkMomentsResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetUserFriendWorkMomentsResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 查询自己大工作圈页面
       tags:
       - 工作圈
@@ -4622,11 +4606,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetUserTagByIDResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetUserTagByIDResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取该用户的标签信息
       tags:
       - 标签
@@ -4658,11 +4642,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetUserTagsResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetUserTagsResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取用户标签信息
       tags:
       - 标签
@@ -4694,11 +4678,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetUserWorkMomentsResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetUserWorkMomentsResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 查询用户工作圈
       tags:
       - 工作圈
@@ -4730,11 +4714,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetWorkMomentByIDResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetWorkMomentByIDResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 通过ID获取工作圈
       tags:
       - 工作圈
@@ -4766,11 +4750,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.LikeOneWorkMomentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.LikeOneWorkMomentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 点赞一条工作圈
       tags:
       - 工作圈
@@ -4802,11 +4786,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.SendMsg2TagResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.SendMsg2TagResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 发送标签消息
       tags:
       - 标签
@@ -4838,11 +4822,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.SetTagResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.SetTagResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 修改标签
       tags:
       - 标签
@@ -4879,11 +4863,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.CreateDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.CreateDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 创建部门
       tags:
       - 组织架构相关
@@ -4915,11 +4899,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.CreateDepartmentMemberResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.CreateDepartmentMemberResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 创建部门用户
       tags:
       - 组织架构相关
@@ -4951,11 +4935,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.CreateOrganizationUserResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.CreateOrganizationUserResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 组织架构导入用户
       tags:
       - 组织架构相关
@@ -4987,11 +4971,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.DeleteDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.DeleteDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 删除部门
       tags:
       - 组织架构相关
@@ -5023,11 +5007,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.DeleteOrganizationUserResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.DeleteOrganizationUserResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 删除组织架构中某个用户
       tags:
       - 组织架构相关
@@ -5059,11 +5043,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.DeleteUserInDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.DeleteUserInDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 删除部门中某个用户
       tags:
       - 组织架构相关
@@ -5095,16 +5079,18 @@ paths:
             - $ref: '#/definitions/base_info.GetDepartmentMemberResp'
             - properties:
                 data:
-                  $ref: '#/definitions/server_api_params.UserDepartmentMember'
+                  items:
+                    $ref: '#/definitions/server_api_params.UserDepartmentMember'
+                  type: array
               type: object
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetDepartmentMemberResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetDepartmentMemberResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取部门中所有成员
       tags:
       - 组织架构相关
@@ -5132,15 +5118,22 @@ paths:
         "0":
           description: ""
           schema:
-            $ref: '#/definitions/base_info.GetSubDepartmentResp'
+            allOf:
+            - $ref: '#/definitions/base_info.GetSubDepartmentResp'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/server_api_params.Department'
+                  type: array
+              type: object
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetSubDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetSubDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取子部门列表
       tags:
       - 组织架构相关
@@ -5177,11 +5170,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetUserInDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetUserInDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取部门中的所有用户
       tags:
       - 组织架构相关
@@ -5213,11 +5206,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.UpdateDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.UpdateDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 更新部门信息
       tags:
       - 组织架构相关
@@ -5249,11 +5242,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.UpdateOrganizationUserResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.UpdateOrganizationUserResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 更新组织架构中的用户
       tags:
       - 组织架构相关
@@ -5285,11 +5278,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.UpdateUserInDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.UpdateUserInDepartmentResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 更新部门中某个用户
       tags:
       - 组织架构相关
@@ -5366,11 +5359,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.AccountCheckResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.AccountCheckResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 检查列表账户注册状态，并且返回结果
       tags:
       - 用户相关
@@ -5402,11 +5395,11 @@ paths:
         "400":
           description: errCode为400 一般为参数输入错误, token未带上等
           schema:
-            $ref: '#/definitions/base_info.GetAllUsersUidResp'
+            $ref: '#/definitions/base_info.Swagger400Resp'
         "500":
           description: errCode为500 一般为服务器内部错误
           schema:
-            $ref: '#/definitions/base_info.GetAllUsersUidResp'
+            $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取所有用户uid列表
       tags:
       - 用户相关
